// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Text Field renders 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
>
  <Label
    label="Text Test"
    required={false}
  />
  <InputGroup
    bsClass="input-group"
    style={Object {}}
  >
    <div
      id="before_addon"
    >
      before
    </div>
    <FormControl
      bsClass="form-control"
      componentClass="input"
      disabled={false}
      name="fieldName"
      onBlur={[Function]}
      onChange={[Function]}
      style={
        Object {
          "zIndex": "0",
        }
      }
      type="text"
    />
    <div
      id="after_addon"
    >
      after
    </div>
  </InputGroup>
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "minHeight": "6ex",
      }
    }
  >
    The help Text
  </HelpBlock>
</FormGroup>
`;

exports[`The Text Field renders a textarea when the type is textarea 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
>
  <Label
    label="Text Test"
    required={false}
  />
  <InputGroup
    bsClass="input-group"
    style={Object {}}
  >
    <div
      id="before_addon"
    >
      before
    </div>
    <FormControl
      bsClass="form-control"
      componentClass="input"
      disabled={false}
      name="fieldName"
      onBlur={[Function]}
      onChange={[Function]}
      style={
        Object {
          "zIndex": "0",
        }
      }
      type="text"
    />
    <div
      id="after_addon"
    >
      after
    </div>
  </InputGroup>
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "minHeight": "6ex",
      }
    }
  >
    The help Text
  </HelpBlock>
</FormGroup>
`;

exports[`The Text Field renders the help message with a break 1`] = `
<FormGroup
  bsClass="form-group"
  controlId="fieldName"
  validationState={null}
>
  <Label
    label="Text Test"
    required={false}
  />
  <InputGroup
    bsClass="input-group"
    style={Object {}}
  >
    <div
      id="before_addon"
    >
      before
    </div>
    <FormControl
      bsClass="form-control"
      componentClass="input"
      disabled={false}
      name="fieldName"
      onBlur={[Function]}
      onChange={[Function]}
      style={
        Object {
          "zIndex": "0",
        }
      }
      type="text"
    />
    <div
      id="after_addon"
    >
      after
    </div>
  </InputGroup>
  <HelpBlock
    bsClass="help-block"
    style={
      Object {
        "minHeight": "6ex",
      }
    }
  >
    There was an error
    <br />
    The help Text
  </HelpBlock>
</FormGroup>
`;
